# EscrowX

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: package-lock.json  package.json
backend/src/: app.ts
backend/src/config/: db.ts
backend/src/controllers/: authController.ts  chatController.ts  deliveryController.ts  escrowController.ts  escrowUpdateController.ts  hireRequestController.ts  listingApplicationController.ts  listingController.ts  profileController.ts  proposalController.ts
backend/src/models/: Conversation.ts  Delivery.ts  EscrowUpdate.ts  HireRequest.ts  Listing.ts  ListingApplication.ts  Message.ts  Profile.ts  ProjectEscrow.ts  ProjectTransaction.ts  Proposal.ts  SocialLink.ts  UserSkill.ts
backend/src/routes/: chatRoutes.ts  deliveryRoutes.ts  escrowRoutes.ts  hireRequestRoutes.ts  listingApplicationRoutes.ts  listingRoutes.ts  profileRoutes.ts  proposalRoutes.ts
backend/src/sockets/: chatSocket.ts
backend/src/utils/: contactBlocker.ts
contracts/escrow-contract/: Cargo.toml
contracts/escrow-contract/src/: errors.rs  escrow.rs  lib.rs  storage.rs  types.rs
frontend/: db.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: axiosClient.ts  dashboard.api.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/config/: stellar.config.ts
frontend/src/hooks/: useEscrowContract.ts  useFreighter.ts  useFundEscrow.ts  useSocket.ts
frontend/src/lib/: escrowId.ts  mock-data.ts  soroban.ts  stellar.config.ts  types.ts
frontend/src/pages/: ClientApplicationsPage.tsx  (+12 more)
(+33 files in other folders)
